# amazon-order-exporter

./: .gitignore  README.md  pyproject.toml
src/amazon_order_exporter/: cli.py  exporter.py  models.py  parsing.py  scraper.py
tests/: test_exporter.py  test_parsing.py  test_scraper.py
